--- a/styles.css
+++ b/styles.css
@@ -1244,8 +1244,8 @@ main {
 
 /* MOBILE CARD PADDING */
 @media (max-width: 899px) {
-  .card-grid {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
+  ul.card-grid {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
   }
 }
