--- a/styles.new.css
+++ b/styles.new.css
@@ -594,7 +594,7 @@ main,
   --content-gutter: 24px;
 } /* adjust if you want more/less space */
 
-@media (min-width: 900px) {
+@media (width >= 900px) {
   .site-header,
   main,
   .site-footer {
